--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "codeffee",
+  "name": "starbucks-tp",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "tp-kit"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,21 +12,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "20.6.3",
-    "@types/react": "18.2.22",
+    "@types/node": "20.4.7",
+    "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.5.1",
-    "next": "13.5.1",
-    "postcss": "8.4.30",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.46.0",
+    "eslint-config-next": "13.4.12",
+    "next": "13.4.12",
+    "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
-  },
-  "workspaces": [
-    "tp-kit"
-  ]
+    "typescript": "5.1.6"
+  }
 }
