--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,17 +5,16 @@ version: '3.1'
 services:
 
   docs:
-
     image: 'node:alpine'
-
     ports:
-
       - 6006:6006
-
     working_dir: '/app'
-
     volumes:
 
       - ./tp-kit:/app
-
     command: "npm run storybook:start"
+  db:
+    image: postgres:alpine
+    restart: unless-stopped
+    environment:
+      POSTGRES_PASSWORD: password
