--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.5.0",
+    "@prisma/client": "^5.1.1",
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
@@ -28,10 +28,12 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "prisma": "^5.5.0",
-    "ts-node": "^10.9.1"
+    "prisma": "^5.1.1",
+    "ts-node": "^10.9.1",
+    "prettier": "^3.0.1",
+    "prettier-plugin-tailwindcss": "^0.5.2"
   },
   "prisma": {
-	  "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
-	}
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  }
 }
